osha.theme Changelog
====================

osha.theme 1.2.19 (unreleased)
------------------------------

- replaced several occurrences of parent-fieldname-image ids through classes (pilz)
- added a vocabulary for testing the annotatablelinklist feature (pilz)
- bugfix in the ess_template (thomasw)

osha.theme 1.2.18 (2009-09-01)
------------------------------

- making use of slc.googlesearch's new additional_parameters feature (thomasw)

osha.theme 1.2.17 (2009-08-31)
------------------------------

- changed behaviour in osh-macros in case of missing publication date (gerken)
- in oshnews-local-view: make sure only news that are already effective are shown (thomasw)
- rss_template: made the <item> section more human readable; Subject is now translated;
  use item's effective date if present, fall back to modification date (thomasw)

osha.theme 1.2.16 (2009-08-18)
------------------------------

- Fixed wrong configuration and broken links for anyurl on the rss feeds page (gerken)

osha.theme 1.2.15 (2009-08-17)
------------------------------

- improved testing (gerken)
- replaced logos by new versions made by Cornelis (thomasw)

osha.theme 1.2.14 (2009-08-14)
------------------------------

- Fix for ticket 379 (gerken)

osha.theme 1.2.13 (2009-08-12)
------------------------------

- Deleting users will no longer delete all their roles in the portal. That
  makes user deletion much faster (gerken)
- overwriting atct_album_view.pt from ATContentTypes to hide the folder-listing view if "other"
  content is present; overwriting atctListAlbum.py to also include Large Plone Folder (thomasw)
- make links from image-portlet not fail for URLs that need a '?' (thomasw)
- fixed problem with fullscreen-mode of FCK editor (gerken)

osha.theme 1.2.12 (2009-08-03)
------------------------------

- improved RSS-feed generation (gerken)

osha.theme 1.2.11 (2009-08-02)
------------------------------
