@@ -16,6 +16,14 @@
 
         <div tal:replace="structure provider:plone.abovecontenttitle" />
 
+        <div id="oshnetwork_editors_box">
+            <ul>
+                <li><a tal:attributes="href string:${here/absolute_url}/edit">Edit this page</a></li>
+                <li><a tal:attributes="href string:${here/absolute_url}/news/folder_contents">Manage News</a></li>
+                <li><a tal:attributes="href string:${here/absolute_url}/events/folder_contents">Manage Events</a></li>
+            </ul>
+        </div>
+
         <h1 class="documentFirstHeading"> 
             <metal:field use-macro="python:here.widget('title', mode='view')">
             Title
@@ -99,7 +107,7 @@
             </tr>
             </tbody>
         </table>
-        <div tal:content="view/getNews"></div>
+        <!-- <div tal:content="view/getNews"></div> -->
         <div tal:replace="structure provider:plone.belowcontentbody" />
 
     </tal:main-macro>
