@@ -982,6 +982,19 @@ div.managedPortlet.portlet {
 }
 
 
+#oshnetwork_editors_box {
+    background: lightgray;
+    border: 1px solid gray;
+    margin-bottom:0.5em;
+}
+#oshnetwork_editors_box ul {
+    display:inline;
+}
+#oshnetwork_editors_box ul li {
+    display: block;
+    float:left;
+    padding: 0 1em;
+}
 /* </dtml-with> */
 
 /* Latest version of the documentation on pre-defined properties from Plone 
